test/k8sT/manifests/cnp-to-entities-world.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "to-entities-all"
spec:
  endpointSelector:
    matchLabels:
      {}
  egress:
  - toEntities:
    - world
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
